--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+     "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/react": "11.2.5",
+    "@testing-library/user-event": "12.6.2",
+    "chalk": "4.1.0",
+    "chart.js": "4.3.3",
+    "react": "17.0.1",
+    "react-chartjs-2": "5.2.0",
+    "react-dom": "17.0.1",
+    "react-router": "6.14.2",
+    "react-router-dom": "6.14.2",
+    "react-speech-kit": "3.0.1",
+    "uuid": "9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
